react-app/src/styles/global.css
/* ... */
.data-flow-item-icon {
  width: 40px;
  height: 40px;
}

.data-flow-item-icon, .data-flow-logo {
  margin-top: 15px;
}

.data-flow-item p {
  text-align: center;
  margin: 10px;
}

.item-bg-1 {
  background-color: #e0e6e6;
  color: var(--dl-color-brand-blue);
}

.item-bg-2 {
  background-color: #f4e4de;
  color: #e84e0f;
}

.item-bg-3 {
  background-color: #fff2cc;
  color: #ba9011;
}

.item-bg-4 {
  background-color: #e0e6e6;
  color: #017176;
}

.white-box {
	background-color: var(--dl-color-pure-white);
	border-radius: 8px;
	box-shadow: 0 2px 5px #0003;
}

.data-flow-logo-item  {
  flex: 1 1 150px;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 150px;
  min-height: 100px;
}

.flex-space-evenly {
  justify-content: space-evenly;
  gap: 0;
}

.data-flow-logo-item img {
  max-width: 100%;
}

/* --- DATA PAGE --- */
.data-container {
  background-color: var(--dl-color-default-smartwhite);
}

.data-container > :last-child {
  background-color: var(--dl-color-default-smartwhite);
}

.data-content {
  display: flex;
  flex-direction: column;
  align-items: center;

  position: relative;
  z-index: 1;

  /* space from top of image - gradient cover image */
  --space-from-top: calc(140px - 742px);
  top: var(--space-from-top);
  margin-bottom: var(--space-from-top);
  min-height: calc(742px - 140px);
}

.data-card {
  background-color: var(--dl-color-default-smartwhite);
  
  width: 1380px;
  border: 0 solid transparent;
  border-radius: 8px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  padding: 20px;
}

.data-card-header {
  border-bottom: solid 1px rgb(153,153,153,.3);
  padding: 20px;
}

.data-card-header-container {
  display: flex;
  gap: 30px;
  .dc-heading {
    margin-top: 0px;
  }
}

.data-card-header-icon {
  width: 47px;
  height: 46px;
}

.data-card-body {
  display: flex;
}

.data-card-filter {
  width: 297px;
  border-right: solid 1px rgb(153,153,153,.3);
  padding: 30px 30px 30px 20px;
}

.data-card-filter-collapsed {
  width: auto;
}

.text-rotate {
  display: block;
  transform: rotate(-90deg);
}

.data-card-filter-button-collapse {
  /* display: flex;
  flex-direction: column;
  max-width: 40px; */
  position: relative;
  display: inline-block;

}

.data-card-filter-button-collapse .text-rotate {
  /* padding-right: 3rem; */
  position: absolute;
  margin-left: -20px;
  margin-top: 1.5rem;
}

.data-card-button-group {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.data-card-filter-button {
  font-family: Inter;
  font-size: 25px;
  font-weight: 400;
  line-height: 30.26px;
  letter-spacing: -0.04em;
  text-align: left;
}

.data-card-clear-button {
  font-family: Inter;
  font-size: 12px;
  font-weight: 700;
  line-height: 14.52px;
  letter-spacing: -0.03em;
  text-align: left;
  color: var(--dl-color-brand-orange);
}

.data-card-form-container {
  padding-top: 30px;
}

.data-card-form {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.data-card-form label {
  clip: rect(0 0 0 0); 
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.data-card-form select, .data-card-form input,
.select-filter {
  appearance: none;
  -webkit-appearance: none;
  padding: 0.5rem;
  background: white;
  border: 1px solid rgba(153, 153, 153, 1);
  border-radius: 5px;
  font-family: Inter;
  font-size: 13px;
  font-weight: 400;
  line-height: 15.73px;
  letter-spacing: -0.02em;
  text-align: left;
}

.data-card-form select {
  min-width: 237px;
  width: 100%;
}

.select-wrapper {
  position: relative;
}

.select-wrapper::after {
  content: "\25B6";
  font-size: 9px;
  top: 12px;
  right: 12px;
  position: absolute;
}

.options-wrapper {
  width: 222px;
  padding: 1rem 1rem 0.5rem;
  background: var(--dl-color-pure-white);
  border: 1px solid rgba(153, 153, 153, 1);
  border-radius: 5px;

  font-family: Inter;
  font-size: 13px;
  font-weight: 400;
  line-height: 15.73px;
  text-align: left;

  position: absolute;
  top: 0;
  right: -250px;
}

.options-wrapper li {
  padding-bottom: 0.5rem;
}

.options-wrapper .option-button {
  display: flex;
  align-items: center;
}

.options-wrapper .option-button-icon {
  margin-right: 0.5rem;
  display: inline-block;
  /* vertical-align: middle; */
  width: 8px;
  height: 8px;
  border: 0.5rem solid black;
  border-radius: 5px;
  background-color: var(--dl-color-pure-white);
}

.option-button :last-child {
  text-align: right;
  margin-left: auto;
}

.data-card-table-container {
  flex: 1;
}

.data-card-table-container h3 {
  margin: 30px;
}

.data-card-table {
  width: 100%;
  border-collapse: collapse;
  overflow: hidden;
}

.data-card-table tr {
  height: 72px;
}

.data-card-table > tr:first-child {
  border-bottom: solid 1px rgb(153, 153, 153, .3);
}

.data-card-table tr:nth-child(2n + 2) {
  background-color: rgba(235, 242, 243, 1);
}

.data-card-table tr:nth-child(n+2):hover {
  background-color: var(--dl-color-default-verylightblue);
  cursor: pointer;
}

.data-card-table tr:nth-child(n+2):hover a.data-gene-link {
  color: var(--dl-color-brand-blue);
}

.data-card-table tr:nth-child(n+2):hover .gene-count {
  background-color: var(--dl-color-brand-blue);
}

.data-card-table tr:nth-child(n+2):hover .icon-triple-squares {
  background-image: url("../images/icons/squares.svg");
}

.data-card-table th {
  font-family: Inter;
  font-size: 10px;
  font-weight: 500;
  line-height: 12.1px;
  letter-spacing: 0.1em;
  text-align: left;
  text-transform: uppercase;
}

.data-card-table td {
  padding: 0.5rem;
  font-family: Inter;
  font-size: 13px;
  line-height: 15.73px;
  text-align: left;
}

.data-card-table td .data-text {
  max-height: 32px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.data-card-table td .data-download-text {
  display: inline-block;
}

.data-card-table td .icon {
  display: block;
  width: 1rem;
  height: 1rem;
}

.data-card-table td:nth-child(1) {
  max-width: 0.5rem;
  border-left: 2rem solid transparent;
}
/* ... */

